Upgrade gradle and library